checkCryptoListInSotrage, getCryptoPairsList - the function was moved from CryptoPair.js to new file. The saveCryptoInfoListToLocalStorage function was added in storage.js. To work: use shouldUpdateCryptoList to check if one day has passed, and based on the response from the function, determine whether new data needs to be requested.

--- a/pages/index.html
+++ b/pages/index.html
@@ -179,7 +179,9 @@
         <script src="../js/generateUnicId.js"></script>
         <script src="../js/CryptoNote.js"></script>
         |<script src="../js/CryptoPair.js"></script>
+        <script src="../js/getCryptoPairsList.js"></script>
         <script src="../js/storage.js"></script>
+        <script src="../js/checkCryptoListInStorage.js"></script>
         <script src="../js/addCrypto.js"></script>
         <script src="../js/table.js"></script>
         <!-- <script src="../js/getPriceInfo.js"></script> -->
