add first chart

--- a/pages/index.html
+++ b/pages/index.html
@@ -70,17 +70,8 @@
             <div class="diagram_container">
                 <div class="diagram">
 
-                </div>
-                <ul>
-                    <li>BTC</li>
-                    <li>ETH</li>
-                    <li>BTC</li>
-                    <li>ETH</li>
-                    <li>BTC</li>
-                    <li>ETH</li>
-                    <li>BTC</li>
-                    <li>ETH</li>
-                </ul>
+                <canvas id="cryptoPieCanvas" style="width: 100%; height: 400px;"></canvas>
+
             </div>
             
         </section>
@@ -148,10 +139,12 @@
         <script type="module" src="../js/checkCryptoListInStorage.js"></script>
         <script type="module" src="../js/formAutocompleteHandler.js"></script>
         <script type="module" src="../js/addCrypto.js"></script>
+        <script type="module" src="../js/loadAndRenderAllCryptoPairs.js"></script>
         <script type="module" src="../js/CryptoPair.js"></script>
         <script type="module" src="../js/table.js"></script>
         <script type="module" src="../js/overflowObserver.js"></script>
-
+        <script type="module" src="../js/charts/drawChart.js"></script>
+        <script type="module" src="../js/charts/drawPieChart.js"></script>
     </body>
 </html>
 
