--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/styles.css">
-        <link rel="stylesheet" href="../css/modal.css">
+        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/modal.css">
         <title>Crypto Wallet</title>
     </head>
     <body>
@@ -21,7 +21,7 @@
             </div>
             <div class="balance_overview container_overview margin-top">
                 <h3>Your balance</h3>
-                <img src="../images/icons/free-icon-astronaut-4269088.png" alt="avatar">
+                <img src="./images/icons/free-icon-astronaut-4269088.png" alt="avatar">
                 <div class="amount_area">
                     <p>Amount:</p>
                     <h3>54322055$</h3>
@@ -60,14 +60,14 @@
                 <h5>TTM Wallet</h5>
                 <h1>To The Moon Wallet</h1>
                 <div>
-                    <img src="../images/backgrounds/IMG_20240319_154735.png">
+                    <img src="./images/backgrounds/IMG_20240319_154735.png">
                     <p>Simplicity. Notes, Crypto. Everything you need to display and analyze your cryptocurrency purchases.</p> 
                 </div> 
             </div>
             <div class="mobile_balance">
                 <h3>Your balance</h3>
                 <div class="balance_row">
-                    <img src="../images/icons/free-icon-astronaut-4269088.png" alt="user" />
+                    <img src="./images/icons/free-icon-astronaut-4269088.png" alt="user" />
                     <p><span class="label">Amount:</span> <strong>54322055$</strong></p>
                 </div>
                 <button class="purpleButton makeRecordButton">Make new record</button>
@@ -180,34 +180,40 @@
             </form>
         </div>
 
-        <!-- 1. Утилиты -->
-        <script type="module" src="../js/utils/generateUnicId.js"></script>
-        <script type="module" src="../js/utils/getCryptoPairsList.js"></script>
-        <script type="module" src="../js/utils/formAutocompleteHandler.js"></script>
-        <script type="module" src="../js/utils/overflowObserver.js"></script>
-        <script type="module" src="../js/utils/renderAllCryptoPairs.js"></script>
-        <script type="module" src="../js/utils/generateColor.js"></script>
-        <script type="module" src="../js/utils/playDeleteSound.js"></script>
+        <script type="module" src="./js/utils/generateUnicId.js"></script>
+        <script type="module" src="./js/utils/getCryptoPairsList.js"></script>
+        <script type="module" src="./js/utils/formAutocompleteHandler.js"></script>
+        <script type="module" src="./js/utils/overflowObserver.js"></script>
+        <script type="module" src="./js/utils/renderAllCryptoPairs.js"></script>
+        <script type="module" src="./js/utils/generateColor.js"></script>
+        <script type="module" src="./js/utils/playDeleteSound.js"></script>
 
-        <!-- 2. Работа с хранилищем -->
-        <script type="module" src="../js/storage/storage.js"></script>
-        <script type="module" src="../js/storage/checkCryptoListInStorage.js"></script>
+        <script type="module" src="./js/storage/storage.js"></script>
+        <script type="module" src="./js/storage/checkCryptoListInStorage.js"></script>
 
-        <!-- 3. Компоненты -->
-        <script type="module" src="../js/components/modalWindows.js"></script>
-        <script type="module" src="../js/components/CryptoPair.js"></script>
-        <script type="module" src="../js/components/CryptoNote.js"></script>
+        <script type="module" src="./js/components/modalWindows.js"></script>
+        <script type="module" src="./js/components/CryptoPair.js"></script>
+        <script type="module" src="./js/components/CryptoNote.js"></script>
 
-        <!-- 4. Действия -->
-        <script type="module" src="../js/actions/addCrypto.js"></script>
+        <script type="module" src="./js/actions/addCrypto.js"></script>
+        <script type="module" src="./js/table/table.js"></script>
 
-        <!-- 5. Таблица -->
-        <script type="module" src="../js/table/table.js"></script>
+        <script type="module" src="./js/charts/drawChart.js"></script>
+        <script type="module" src="./js/charts/drawPieChart.js"></script>
 
-        <!-- 6. Чарты -->
-        <script type="module" src="../js/charts/drawChart.js"></script>
-        <script type="module" src="../js/charts/drawPieChart.js"></script>
+  <!-- Регистрация Service Worker -->
+    <script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./service-worker.js')
+
+            .then(reg => console.log("✅ Service Worker registered", reg))
+            .catch(err => console.error("❌ Service Worker error", err));
+        });
+    }
+    </script>
+
 
     </body>
 </html>
-
+ 
