--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <th>Amount</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="tableBody">
 
                     </tbody>
                 </table>
@@ -91,7 +91,7 @@
                             <th>Amount</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="tableBody">
 
                     </tbody>
                 </table>
@@ -207,8 +207,8 @@
         window.addEventListener('load', () => {
         navigator.serviceWorker.register('./service-worker.js')
 
-            .then(reg => console.log("✅ Service Worker registered", reg))
-            .catch(err => console.error("❌ Service Worker error", err));
+            .then(reg => console.log("Service Worker registered", reg))
+            .catch(err => console.error("Service Worker error", err));
         });
     }
     </script>
