fix errors in html and add updatePieChart() in resetData()

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -60,7 +60,7 @@
                 <h5>TTM Wallet</h5>
                 <h1>To The Moon Wallet</h1>
                 <div>
-                    <img src="./images/backgrounds/IMG_20240319_154735.png">
+                    <img src="./images/backgrounds/IMG_20240319_154735.png" alt="astronaut" />
                     <p>Simplicity. Notes, Crypto. Everything you need to display and analyze your cryptocurrency purchases.</p> 
                 </div> 
             </div>
@@ -79,7 +79,7 @@
             <div class="records_overview container_overview mobile-overview">
                 <div class="row">
                     <h3>Your records</h3>
-                    <button class="purpleButton resetButton mobile-reset-data-button" id="resetDataButton">Reset Data</button>
+                    <button class="purpleButton resetButton mobile-reset-data-button">Reset Data</button>
                 </div>
                 <table id="mobileTableNotes" class="tableNotes">
                     <thead>
