--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <script type="module" src="./js/charts/drawChart.js"></script>
   <script type="module" src="./js/charts/drawPieChart.js"></script>
 
-  <!-- <script>
+  <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('./service-worker.js')
@@ -171,7 +171,7 @@
           .catch(err => console.error('Service Worker error', err));
       });
     }
-  </script> -->
+  </script>
 
 <div id="introModal">
     <div>
